# FH6-HorizonTuner

./: .gitignore  .pkgdirignore  .pkgignore  FH6 遙測調校工具計畫.md  FH6 遙測調校工具設計計畫.md  FH6-HorizonTuner.spec  LICENSE  README.en.md  README.md  biome.json  build_release.bat  car_database.json  feedback_proposal.md  hud_imgui_evaluation.md  pyproject.toml  requirements.txt  scratch_update.js  settings.json  start_all.bat  start_backend.bat  start_frontend.bat  walkthrough.md
.Jules/: palette.md
.agents/: AGENTS.md  Journal.md
.agents/rules/: workspace.md
.github/workflows/: ci.yml
.jules/: bolt.md
backend/: Cargo.toml  analysis_worker.py  car_database.json  hud_config.json  layout.json  main.py  motec_exporter.py  requirements.txt  telemetry_listener.py  telemetry_sqlite.py  test_drag_recorder.py  update_car_db.py
backend/car_params/: 1009.json  1041.json  1478.json  325.json  3629.json  3847.json  4090.json  default_car.json
backend/src/: analysis.rs  database.rs  drag.rs  main.rs  settings.rs  telemetry.rs  tunings.rs
backend/tunings/: 1478-Hill Climb.json  325-Optimized.json  325-Untitled_2026-06-27.json  3847-S1 800 Optimized.json  3847-S1 800 Trail.json
frontend/: README.md  apply_object_pool.cjs  check_braces.cjs  clean_unused_vars.cjs  diff.txt  diff2.txt  find_brace.cjs  fix3.cjs  fix_layout.cjs  fix_telemetry2.cjs  fix_telemetry_view.cjs  fix_vars.cjs  head.diff  index.html  old_view.tsx  old_view2.tsx  package-lock.json  package.json  patch_styles.cjs  pnpm-lock.yaml  refactor3.cjs  refactor4.cjs  repair.cjs  repair2.cjs  rewrite_canvas.cjs  rewrite_event_driven.cjs  vite.config.ts
frontend/scripts/: verify-resources.js
frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
lang/: en-us.json  iso639.json  ja-jp.json  zh-tw.json
ml_helper/: README.md  data_loader.py  implementation_plan.md  model.py  predict.py  train.py  walkthrough.md
tests/: test_analysis_sqlite.py  test_drag_recorder.py  test_log_api.py  test_overlay_api.py  test_telemetry_listener.py
tool/hud/: ExtractCode.java  ExtractDetailedWndProc.java  ExtractKeyCheck.java  ExtractWndProc.java  README.md  analyze_presets.py  decompiled_output.txt  extract_offsets.py  extract_resources.py  find_user32_imports.py  ghidra_script.py  hybrid_frontend_architecture.md  key_check_decompiled.txt  (+6 more)
tool/overlay/: CMakeLists.txt  DXGIOverlayManager.cpp  DXGIOverlayManager.h  WebSocketClient.h  layout.ini  main.cpp
tool/overlay/presets/: Defi Advance.ini  JZX100.ini  NFS2015.ini  Speedhut Datsun Z.ini
(+67 files in other folders)
