[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
byteorder = "1.5.0"
directories = "6.0.0"
futures-util = "0.3.33"
parking_lot = "0.12.5"
rmp-serde = "1.3.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
